[dev] fix: fixed layout about view on small screen and work view

--- a/website/src/assets/views/work.css
+++ b/website/src/assets/views/work.css
@@ -20,3 +20,9 @@
   /* fix height */
   height: 100%;
 }
+
+@media (max-width: 768px) {
+  .cards-container {
+    grid-template-columns: 1fr;
+  }
+}
